--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device width",initial-scale=1>
+        <title>Assignment solution</title>
+        <link rel="stylesheet" href="style.css">
 
+    </head>
+    <body>
+        <div class="container">
+            <div class="row">
+                <h1 class="menu-title">Our Menu</h1>
+                <div class="col-lg-4">
+                    <div class="item">
+                    <div class="item-title" id="title-1">
+                    <h3>Chicken</h3>
+                </div>
+            
+            <p>Dummy Text</p>
+           </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="item">
+                <div class="item-title" id="title-2">
+                    <h3>Beef</h3>
+
+                </div>
+                <p>Dummy text-2
+
+                </p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-lg-tablet">
+
+            <div class="item">
+                <div class="item-title" id="title-3">
+                    <h3>Sushi</h3>
+
+                </div>
+                <p>Dummy Text-3</p>
+            </div>
+          </div>
+            
+            </div>
+        </div>
+    </body>
+</html>
